0.5.2 - currently working on
- [#2217] Fix: tx_oelib_testingFramework::cleanUp() must not fail if a file created by the testing framework does not exist
- [#788] Fix: Use t3lib_div::trimExplode instead of explode
- [#2629] Cleanup: Remove XCLASS stuff from all classes in tests/ and tests/fixtures/
- [#2642] Fix: Login fails with TYPO3 4.2.5
- [#2451] Fix: Undefined variable in createRelationAndUpdateCounter
- [#2494] Change: The autoloader should include the constants

0.5.1 - released 2009-01-02
- [#2502] Change: Update copyrights to 2009
- [#2468] Change: Clean up and speed up the HTML template parsing
- [#768] Change: Use real visibility keywords (public/protected/private)
- [#2085] Fix: configcheck::checkIfPositiveIntegerValue: unused parameter $sheet
- [#2100] Feature: Add class tx_oelib_Exception_AccessDenied

0.5.0 - released 2008-12-21
- [#2435] Change: Allow having non-identical template objects for the same template file
- [#2321] Feature: The FE user data mapper should be able to get and use the currently logged-in FE user
- [#2322] Feature: Create an autoloader for models and other classes
- [#2417] Feature: CreateFrontEndUser should automatically create a group if needed
- [#2412] Fix: Full stop is missing in error message for missing locales
- [#2327] Fix: FE Editor will not allow me to edit oder enter events
- [#2341] Change: Use the new template and templateRegistry in tx_oelib_templatehelper
- [#2324] Feature: Add a class templateRegistry
- [#2323] Feature: Add a class template

0.4.3 - released 2008-11-04
- [#2041] Feature: Provide an abstraction for FE users
- [#2313] Feature: Add a class "mapperRegistry"
- [#2120] Change: Use tabs for indentation only at the beginning of lines
- [#1403] Feature: createRelation() needs to update the relation counter field in the local record
- [#2277] Fix: Unit test failure when pedantic is installed: testHeaderProxyInNonTestModeReallySendsCatchableHeader