@@ -1,4 +1,5 @@
 0.5.2 - currently working on
+- [#2662] Fix: Include of the FE class fails if tslib is not defined
 - [#2217] Fix: tx_oelib_testingFramework::cleanUp() must not fail if a file created by the testing framework does not exist
 - [#788] Fix: Use t3lib_div::trimExplode instead of explode
 - [#2629] Cleanup: Remove XCLASS stuff from all classes in tests/ and tests/fixtures/
